@@ -1906,7 +1906,9 @@ Tcl_PosixError(
 
     msg = Tcl_ErrnoMsg(errno);
     id = Tcl_ErrnoId();
-    Tcl_SetErrorCode(interp, "POSIX", id, msg, NULL);
+    if (interp) {
+	Tcl_SetErrorCode(interp, "POSIX", id, msg, NULL);
+    }
     return msg;
 }
 
